--- a/Poc_Projeto/src/main/resources/application.properties
+++ b/Poc_Projeto/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-#spring.jpa.database=POSTGRESQL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/agenda
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/agenda
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+
+spring.profiles.active=storage-local
